--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/ICO.ico">
+  <meta name="description" content="Jacob Alexander's Resume">
+  <meta name="author" content="862309967">
 
-  <title>John Doe - Business Administration</title>
+  <title>Jacob Alexander - Healthcare Administration</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,10 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Jacob Alexander</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
-      </span>
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/JacobAlexander.jpg" alt="Profile Picture">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -58,26 +57,25 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Jacob Alexander
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Healthcare Administration📚</div>
+        <p class="lead mb-4">Born at Kaweah Delta Medical Center in Visalia, CA, I am currently 18 years old and an aspiring Healthcare Administrator. I have been blessed with one sibling and an amazing mother and father. I have one sister who is 15 and is a sophomore at Redwood High School. I enjoy spending time with my family, riding bikes, swimming, and traveling. I am currently majoring in Business Administration at UC Riverside and aspire to complete a Masters Degree in Healthcare Administration.<br><br>
 
-        Enter bio here<br><br>
-
-        Enter bio here
+        <br><br>
+ 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/jacob-alexander-327873230/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/jakeryry03">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/jalex033">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:jalex033@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,97 +90,75 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Science Olympiad</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.soinc.org/">President Of Science Olympiad</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Provided communication between lead teacher and team members<br> 
+              • Created schedules for team meetings, activities, and competitions<br>
+              • Actively managed budget and coordinated fundraisers<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">August 2019 - June 2021</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">UPHS Robotics Team</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">President and Lead Financial Officer</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Managed day to day operations for the team such as communications, team lead meetings, and lead teacher meetings<br>
+              • Fundraisers<br>
+              • Grant Writing<br>
+              • Competitions<br>
+              <br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">March 2019 - June 2021</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Internship</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Adventist Health - Hanford, CA</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
-
-          </p>
-          </div>
+            • Learn about healthcare revenue cycles<br>
+            • Daily operations of healthcare professionals and teams<br>
+            • Benefits of healthcare providers<br>
+            • Podiatry shadowing experience<br>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
-          </div>
-        </div>
-
-
-
-      </div>
+            <span class="text-primary">June 2018 - July 2018</span>
 
     </section>
 
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="education">
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
+    
+                    <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
             <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div>BS - Business Administration with a concentration in Accounting</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2021 - June 2024</span>
           </div>
         </div>
-
-      </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
+          <div class="resume-content">
+            <h3 class="mb-0">University Preparatory High School</h3>
+            <div class="subheading mb-3">High School Diploma</div>
+            <div>High School Degree</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2017 - June 2021</span>
+          </div>
+        </div>
     </section>
 
     <hr class="m-0">
@@ -191,7 +167,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+    <img src="img/image 5.jpg" width="500px"><br>
+    <img src="img/image 3.jpg" width="500px"><br>
+    <img src="img/image 4.jpg" width="500px"><br>
+    <img src="img/image 6.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +178,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Jacob Alexander</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
